# lerning-and-mor-lerning

./: .#CHANGELOG.md  .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  funcion.c  main.cpp  prog
includes/: linker.h  list.h  make_graph.h
output/: hibridexe
src/: .#funcion.c  .#make_graph.c  funcion.c  lib.rs  linker.c  list.c  main.cpp  make_graph.c
